# build-own-compiler

./: .gitignore  README.md  main
personal/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  debug.c  main.c  memory.c  memory.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
research/: README.md
research/binary-operation/: settings.gradle.kts
research/binary-operation/app/src/main/kotlin/org/example/: App.kt
research/binary-operation/app/src/test/kotlin/org/example/: AppTest.kt  CalculatorTest.kt
research/compiler-example/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
research/compiler-example/src/: lexer.cpp  main.cpp
